<resources>
    <string name="app_name">LiveStreaming</string>

    <!--loginActivity -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_login_verify_code">获取验证码</string>
    <string name="activity_login_username">用户名</string>
    <string name="activity_login_password">密码</string>
    <string name="activity_login_btnlogin">登录</string>
    <string name="activity_login_btnphone">手机号登录</string>
    <string name="activity_login_btnuser">用户名登录</string>
    <string name="activity_login_register">注册新用户</string>
    <!--loginActivity -->

    <!--registerActivity -->
    <string name="activity_register_phone_register">手机注册</string>
    <string name="activity_register_normal_register">用户名注册</string>
    <string name="activity_register_register">注册</string>
    <string name="activity_register_username">用户名(4~24位字母、数字、下划线)</string>
    <string name="activity_register_password">密码(6~16位个字符)</string>
    <string name="activity_register_password_verify">确认密码</string>
    <string name="activity_register_phone_num">手机号</string>
    <string name="activity_register_verify_code">验证码</string>
    <string name="activity_register_return">返回</string>
    <string name="text_publish">开始直播</string>
    <string name="text_live_record_no">不进行录制</string>
    <string name="text_live_preview">发起直播</string>
    <string name="btn_cancel">取消</string>
    <string name="text_live_add_title_tips">给你的直播设置一个满意的封面</string>
    <string name="text_live_title_input">请输入直播标题</string>
    <string name="text_live_close_lbs">不显示地理位置</string>
    <string name="teke_photo">拍照</string>
    <string name="pic_lib">从相册中选择</string>
    <string name="cancel">取消</string>
    <string name="float_window_not_allow">悬浮窗权限未开启 请在应用-权限中打开悬浮窗权限</string>
    <string name="loading_ing">正在加载...</string>
    <string name="mores">更多...</string>
    <string name="networkerror_retry">网络异常，上拉重新加载</string>
    <string name="no_more_data_and_click">已加载全部内容 点击刷新</string>
    <string name="recycler_item">1</string>
    <!--registerActivity -->
</resources>
