<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rl_register_root"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_dark"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_horizontal_margin"
                tools:context=".activity.RegisterActivity">

    <Button
        android:id="@+id/btn_verify_code"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_alignEnd="@+id/til_password"
        android:layout_alignRight="@+id/til_password"
        android:layout_below="@+id/til_register"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_login"
        android:clickable="true"
        android:padding="0dp"
        android:text="@string/activity_register_verify_code"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:drawableLeft="@drawable/btn_back_gray"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/btn_back_gray"
        android:text="@string/activity_register_return"
        android:textColor="@color/colorTransparentGray"
        android:textSize="18sp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_back"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/et_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_register_username"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_register">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_register_password"
            android:imeActionId="@+id/register"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white"/>


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_password">

        <EditText
            android:id="@+id/et_password_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_register_password_verify"
            android:imeActionId="@+id/register"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white"/>


    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/tv_phone_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btn_register"
        android:layout_marginTop="10dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:padding="10dp"
        android:text="@string/activity_register_phone_register"
        android:textColor="@color/colorTransparentGray"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_password_verify"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_login"
        android:clickable="true"
        android:padding="10dp"
        android:text="@string/activity_register_register"
        android:textColor="@color/colorPrimary"/>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignTop="@+id/btn_register"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>
</RelativeLayout>
